# agent-teams

./: .env.example  .gitignore  README.md  hello_sdk.py  multi-agent-team-spec.md  pyproject.toml  requirements.txt
examples/: design_review.py  export_chat.py  haiku.py  messaging.py  postmortem.py  premortem.py  recipes.py  refactor.py  research.py  score_debate.py  shutdown.py  standup.py  steelman.py  steelman_inlined.py
runs/20260422_045958/: tasks.jsonl  trace.jsonl
runs/20260422_052529/: tasks.jsonl
runs/20260422_053543/: tasks.jsonl
runs/20260422_054754/: tasks.jsonl  trace.jsonl
runs/20260422_060313/: tasks.jsonl
runs/20260422_131858/: run_summary.json  trace.jsonl
runs/20260422_140431/: trace.jsonl
runs/20260422_153924/: report.md  run_summary.json
runs/20260422_154916/: report.html  report.md  trace.jsonl
runs/20260422_160700_inlined/: run_summary.json  trace.jsonl
runs/20260422_165517/: run_summary.json  tasks.jsonl  trace.jsonl
runs/20260422_205531/: report.md  stage.html
runs/20260423_040452/: report.html  run_summary.json  stage.html  tasks.jsonl  trace.jsonl
teams/: design_review_team.yaml  example_team.yaml  haiku_team.yaml  messaging_demo_team.yaml  postmortem_team.yaml  premortem_team.yaml  recipes_team.yaml  refactor_loop_team.yaml  shutdown_team.yaml  standup_team.yaml  steelman_team.yaml  steelman_team_inlined.yaml
tests/: test_config.py  test_imports.py  test_message_bus.py  test_orchestrator_deps.py  test_orchestrator_dispatch.py  test_replay.py  test_report.py  test_resilience.py  test_scratchpad.py  test_task_store.py
(+316 files in other folders)
